# SODA

./: .gitignore  README.md
include/: IO.h  aul_solver.h  constants.h  control.h  control_t.h  ddp_solver.h  derivation.h  dynamics.h  integration.h  linalg.h  loads.h  monte_carlo.h  parameters.h  pn_solver.h  robust_trajectory.h  settings.h  soda.h  splitting_history.h  state.h  state_t.h  stats.h  trajectory_split.h  transcription.h
script/: main.cpp
script/test_cases/: CMakeLists.txt  cr3bp_EARTH_MOON_lt_dro_to_dro.cpp  cr3bp_EARTH_MOON_lt_haloL2_to_haloL1.cpp  cr3bp_EARTH_MOON_lt_lyapunovL1_to_lyapunovL2.cpp  cr3bp_EARTH_MOON_lt_nrho_to_dro.cpp  double_integrator.cpp  run_test_cases.cpp  tbp_SUN_lt_earth_to_mars.cpp  test_cases.cpp  test_cases.h
source/: IO.cpp  aul_solver.cpp  constants.cpp  ddp_solver.cpp  derivation.cpp  dynamics.cpp  integration.cpp  linalg.cpp  loads.cpp  monte_carlo.cpp  parameters.cpp  pn_solver.cpp  robust_trajectory.cpp  soda.cpp  splitting_history.cpp  stats.cpp  trajectory_split.cpp  transcription.cpp
source/visualisation/: classes.py  compute_LAM.py  main.py  misc.py  plot_2d.py  plot_2d_combined.py  plot_2d_pdf.py  plot_double_integrator.py  plot_hypervolume.py  plot_nli.py  plot_pdf_thrust_profile.py  plot_thrust_profile.py
test/: CMakeLists.txt  run_test.cpp  test_IO.cpp  test_aul_solver.cpp  test_constants.cpp  test_control.cpp  test_ddp_solver.cpp  test_derivation.cpp  test_dynamics.cpp  test_integration.cpp  test_linalg.cpp  test_loads.cpp  test_monte_carlo.cpp  test_parameters.cpp  test_pn_solver.cpp  test_soda.cpp  test_splitting_history.cpp  test_state.cpp  test_stats.cpp  test_trajectory_split.cpp  test_transcription.cpp
